# BulletForceHaxV2

./: .gitignore  BulletForceData.md  Cargo.toml  Development.md  Justfile  LICENSE.md  Photon.md  README.md  bacon.toml  commands.nu  lobby_info.ron  rustfmt.toml
.github/workflows/: tests.yml
bulletforcehax2_app/: Cargo.toml
bulletforcehax2_app/assets/: index.html
bulletforcehax2_app/src/: asset_server.rs  config.rs  main.rs  web_server.rs
bulletforcehax2_app/src/version_manager/: downloader_dialog.rs  mod.rs
bulletforcehax2_lib/: Cargo.toml
bulletforcehax2_lib/src/: hax.rs  hax_impl.rs  lib.rs  version_scraper.rs  webrequest_proxy.rs  websocket_proxy.rs
bulletforcehax2_lib/src/hax/: hax_impl.rs  impl_proxy.rs  impl_webrequest.rs  impl_websocket.rs  mod.rs
bulletforcehax2_lib/src/protocol/: mod.rs  player_script.rs  rpc.rs
bulletforcehax2_lib/src/proxy/: mod.rs  webrequest_proxy.rs  websocket_proxy.rs
bulletforcehax2_server/: Cargo.toml
bulletforcehax2_server/assets/: index.html  script.js
bulletforcehax2_server/src/: config.rs  main.rs  utils.rs  version_management.rs
bulletforcehax2_server/src/routing/: game_assets.rs  hax_ipc_server.rs  mod.rs  web_assets.rs  web_assets_live.rs
bulletforcehax2_shared/: Cargo.toml
bulletforcehax2_shared/src/: lib.rs
bulletforcehax2_ui/: Cargo.toml
bulletforcehax2_ui/src/: lib.rs
bulletforcehax2_web/: Cargo.toml  index.html
bulletforcehax2_web/src/: app.rs  hax_ipc.rs  main.rs  ui_context.rs
bulletforcehax2_web/src/hax_ipc/: mod.rs  ws_worker.rs
bulletforcehax2_web/src/ui/: mod.rs  not_found.rs
bulletforcehax2_web/src/ui/hax/: mod.rs
bulletforcehax2_web/src/ui/hax/hax_menu/: mod.rs
bulletforcehax2_web/src/ui/play/: mod.rs  script.js
photon_lib/: Cargo.toml
photon_lib/src/: lib.rs  photon_data_type.rs  photon_message.rs  primitives.rs
photon_lib/src/highlevel/: gameplay.rs  lobby.rs  macro_impl.rs  mod.rs  structs.rs  structs_impl.rs
photon_lib/src/highlevel/constants/: actor_properties.rs  event_code.rs  game_property_key.rs  mod.rs  operation_code.rs  parameter_code.rs  pun_event_code.rs
photon_lib/src/realtime/: macro_impl.rs  mod.rs
photon_lib/src/realtime/constants/: actor_properties.rs  event_code.rs  game_property_key.rs  mod.rs  parameter_code.rs
photon_lib/src/utils/: derive_utils.rs  mod.rs  photon_data_type_extensions.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  webrequest_proxy.rs  websocket_proxy.rs
src-tauri/src/version_manager/: downloader_dialog.rs  mod.rs  scraper.rs
src-tauri/ui/: index.html
tao_egui/: Cargo.toml
tao_egui/src/: lib.rs
