[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletforcehax2_lib = { path = "../bulletforcehax2_lib" }
bulletforcehax2_ui = { path = "../bulletforcehax2_ui" }
tao_egui = { path = "../tao_egui" }
futures-util = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
egui = "0.19"
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "json"] }
tracing-appender = "0.2"
wry = { version = "0.21", features = ["devtools"] }
bytesize = "1.1"
time = { version = "0.3", features = ["local-offset"] }

# eframe is only used for the download dialog, because it runs before the webview event loop
eframe = { package = "eframe_tao", version = "0.20" }
