[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "Bullet Force launcher and MITM-based hax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bulletforcehax2_lib = { path = "../bulletforcehax2_lib" }
bulletforcehax2_ui = { path = "../bulletforcehax2_ui" }
bytesize = "1.1"
clap = { version = "4", features = ["cargo"] }
eframe = { package = "eframe_tao", version = "0.22" } # eframe is only used for the download dialog, because it runs before the webview event loop
egui = "0.22"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "~0.14.20", features = ["server", "http1", "runtime"] } # only what we need for the asset server
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao_egui = { path = "../tao_egui" }
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
toml = "0.7"
tower = { version = "0.4", features = ["make", "util", "steer"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "json"] }
wry = { version = "0.27", default-features = false, features = ["devtools"] }
