[package]
name = "bulletforcehax2_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photon_lib = { path = "../photon_lib" }
anyhow = "1"
bytes = "1"
futures-util = "0.3"
hyper = { version = "0.14", features = ["http1", "http2", "client", "server"] }
hyper-tls = "0.5"
regex = "1.6"
serde_json = "1"
tokio = "1"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
hyper-tungstenite = "0.8"
tower = { version = "0.4", features = ["make", "util", "steer"] }
tower-http = { version = "0.3", features = ["catch-panic", "cors", "compression-gzip", "decompression-gzip"] }
tracing = "0.1"
futures = "0.3"
