[package]
name = "server"
version = "0.0.0"
edition = "2021"
description = "Bullet Force game host and MITM-based hax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
bulletforcehax2_lib = { path = "../bulletforcehax2_lib" }
include_dir = "0.7.3"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
tower-http = "0.4.0"
