[package]
name = "server"
version = "0.0.0"
edition = "2021"
description = "Bullet Force game host and MITM-based hax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
bulletforcehax2_lib = { path = "../bulletforcehax2_lib" }
clap = { version = "4.1", features = ["cargo"] }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
toml = "0.7"
tower-http = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
