[package]
name = "bulletforcehax2_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photon_lib = { path = "../photon_lib" }
bulletforcehax2_lib = { path = "../bulletforcehax2_lib" }
futures = { version = "0.3", features = ["executor"] }
futures-util = "0.3"
egui = "0.19"
tracing = "0.1"
