[package]
name = "bulletforcehax2_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletforcehax2_lib = { path = "../bulletforcehax2_lib" }
egui = "0.19"
egui_extras = "0.19"
futures = { version = "0.3", features = ["executor"] }
futures-util = "0.3"
photon_lib = { path = "../photon_lib" }
tracing = "0.1"
