[package]
name = "web"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3"
gloo-net = { version = "0.2", default-features = false, features = ["websocket"] }
gloo-timers = { version = "0.2", features = ["futures"] }
log = "0.4"
postcard = "1"
shared = { path = "../bulletforcehax2_shared" }
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
