[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
eframe = { version = "0.22", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.22"
futures = "0.3.28"
gloo-net = { version = "0.3", features = ["websocket"], default-features = false }
gloo-timers = { version = "0.2", features = ["futures"] }
log = "0.4"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "../bulletforcehax2_shared" }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

