[package]
name = "photon_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2"
indexmap = "1.9.1"
ordered-float = "3.1.0"
paste = "1.0.9"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
