[package]
name = "photon_lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2"
derivative = "2.2"
indexmap = { version = "1.9", features = ["serde"] }
ordered-float = { version = "3.1", features = ["serde"] }
paste = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
hex = "0.4"
