[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletforcehax2_lib = { path = "../bulletforcehax2_lib" }
bulletforcehax2_ui = { path = "../bulletforcehax2_ui" }
tao_egui = { path = "../tao_egui" }
futures-util = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
egui = "0.19"
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wry = { version = "0.21.1", features = ["devtools"] }

# eframe is only used for the download dialog, because it runs before the webview event loop
eframe = { package = "eframe_tao", version = "0.20" }
