[package]
name = "tao_egui"
version = "0.1.0"
edition = "2021"
description = "Utility crate to hook an egui window into your tao event loop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin_tao = { version = "0.30", features = ["wayland"] }
glow = "0.11"
egui_glow = { package = "egui_glow_tao", version = "0.20", features = ["winit"] }
